# internal/models/auth_models/refresh_req.go
@@ -1,0 +1,5 @@
+package auth_models
+
+type RefreshReq struct {
+	RefreshToken string `json:"refresh_token" binding:"required"`
+}
